# alma

./: Cargo.toml
src/: main.rs
src/storage/: removeable_devices.rs  storage_device.rs
