[package]
name = "alma"
version = "0.10.0"
authors = ["Roey Darwish Dror"]
edition = "2021"

[dependencies]
which = "4"
log = "0.4"
structopt = "0.3"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
byte-unit = "4.0"
nix = { version = "0.27", features = ["mount"] }
env_logger = "0.10"
pretty_env_logger = "0.5"
dialoguer = "0.11"
console = "0.15"
anyhow = "1"
